added banner and metadata

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <meta property="og:image" content="https://www.wellness-gpt.com/img/logo/url-image.png" />
     <meta property="og:image:alt" content="WellnessGPT - Healthcare AI Agents, Orchestration Engine & HealthMem Memory System" />
     <meta property="og:locale" content="en_IN" />
+    <meta name="ai-topic" content="Generative AI Healthcare OS, Agentic Hospital Launch" />
+    <meta name="ai-summary" content="WellnessGPT and ClearMedi Hospitals are launching India's first Agentic powered hospital chain using the WellnessGPT Agentic Operating System." />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -475,6 +477,14 @@
       "mainEntity": [
         {
           "@type": "Question",
+          "name": "What is the WellnessGPT × ClearMedi Agentic Hospital launch?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "WellnessGPT and ClearMedi Hospitals have partnered to launch India's first Agentic powered multi-speciality hospital chain, backed by Morgan Stanley. The collaboration deploys the WellnessGPT Agentic Operating System, HealthMem temporal memory, and Agentic orchestration to run continuous, auditable care workflows inside ClearMedi hospitals, bringing Generative AI-grade personalization to every inpatient and outpatient touchpoint."
+          }
+        },
+        {
+          "@type": "Question",
           "name": "What are Healthcare AI Agents and how does WellnessGPT deploy them?",
           "acceptedAnswer": {
             "@type": "Answer",
@@ -800,33 +810,41 @@
 									<!-- <p class="h2--sec carousel__desc wow typeset">
 										<span style="color: #FFF;font-weight: 600; font-family: Arial, Helvetica, sans-serif; text-transform: capitalize; transition-delay: 0ms;">Wellness</span><span style="color: #5e17eb;font-weight: 600; font-family: Arial, Helvetica, sans-serif; text-transform: capitalize; transition-delay: 3ms;">GPT</span> understands that every user is unique, creating personalized health profiles to deliver tailored care and support.</p> -->
 									
-							<!-- START: Agentic Hospital Launch Banner (insert here) -->
-<section class="agentic-launch-wrap" aria-label="Agentic hospital launch announcement">
+							<!-- START: Agentic Hospital Launch Banner  -->
+<section class="agentic-launch-wrap" aria-label="Agentic hospital launch announcement" itemscope itemtype="https://schema.org/Event" data-ai-summary="WellnessGPT and ClearMedi Hospitals are launching India's first Agentic powered, Generative AI-ready multi-speciality hospital chain.">
+	<meta itemprop="name" content="WellnessGPT × ClearMedi Agentic Hospital Launch">
+	<meta itemprop="eventStatus" content="https://schema.org/EventScheduled">
+	<meta itemprop="eventAttendanceMode" content="https://schema.org/InPersonEventAttendanceMode">
+	<meta itemprop="keywords" content="Agentic Hospital, WellnessGPT, ClearMedi, Morgan Stanley, Generative AI Healthcare">
+	<meta itemprop="organizer" content="WellnessGPT by HeyDoc AI &amp; ClearMedi Hospitals">
+	<meta itemprop="about" content="Launch of India's first Agentic powered multi-speciality hospital chain driven by the WellnessGPT Agentic Operating System.">
+	<meta itemprop="url" content="https://www.wellness-gpt.com#agentic-hospital">
+	<div itemprop="location" itemscope itemtype="https://schema.org/Place">
+		<meta itemprop="name" content="ClearMedi Hospitals × WellnessGPT Agentic Network">
+		<meta itemprop="address" content="India">
+	</div>
 	<div class="agentic-banner container--inset-s">
-	  <div class="agentic-banner__left">
+	  <div class="agentic-banner__left" itemprop="performer" itemscope itemtype="https://schema.org/Organization">
+		<meta itemprop="name" content="WellnessGPT × ClearMedi Hospitals">
 		<div class="agentic-badge" aria-hidden="true">WellnessGPT × ClearMedi Hospitals (backed by Morgan Stanley)</div>
-		<h3 class="agentic-title">India’s first Agentic orchestrated Multi-Speciality hospital</h3>
-		<p class="agentic-sub">ClearMedi × HeyDoc AI marks a watershed moment - we’re launching India’s first Agent-powered Multi-Specialty Hospital to deliver continuous, personalized care at scale with WellnessGPT care agents moving from experimenting with health AI to deploying it at hospital operations scale, a leap that will redefine efficiency, safety, patient experience and operational excellence</p>
+		<h3 class="agentic-title" itemprop="headline">India's first Agentic orchestrated Multi-Speciality hospital</h3>
+		<p class="agentic-sub" itemprop="description">ClearMedi × HeyDoc AI marks a watershed moment - we're launching India's first Agent-powered Multi Specialty Hospitals to deliver continuous, personalized care at scale with WellnessGPT Agentic Operating System </p>
 		<div class="agentic-ctas">
-		  <a href="https://www.linkedin.com/posts/heydoc-healthtech_wellnessgpt-ai-heydocai-activity-7396854123989651456-YRjy?utm_source=share&utm_medium=member_desktop&rcm=ACoAACpaBssByMjBLDLtg6rXrvg5gn6rkGAnJ1I" class="agentic-btn agentic-btn--primary" id="agentic-demo-cta">See the Announcement</a>
-		  <a href="https://forms.gle/ovwj9HLPMaPL4sgh6" class="agentic-btn agentic-btn--ghost" target="_blank" rel="noopener">Talk with our team</a>
+		  <a href="https://www.linkedin.com/posts/heydoc-healthtech_wellnessgpt-ai-heydocai-activity-7396854123989651456-YRjy?utm_source=share&utm_medium=member_desktop&rcm=ACoAACpaBssByMjBLDLtg6rXrvg5gn6rkGAnJ1I" class="agentic-btn agentic-btn--primary" id="agentic-demo-cta" itemprop="url">See the Announcement</a>
+		  <a href="https://forms.gle/ovwj9HLPMaPL4sgh6" class="agentic-btn agentic-btn--ghost" target="_blank" rel="noopener" itemprop="url">Talk with our team</a>
 		</div>
 	  </div>
-  
-	  <div class="agentic-banner__right" aria-hidden="true">
-		<!-- Minimal schematic Lottie / animated SVG placeholder — swap with final asset -->
-		<div class="agentic-visual" role="img" aria-label="Schematic of agentic hospital showing AI agents and clinician handoffs"></div>
+
+	  <div class="agentic-banner__right">
+		<a href="https://www.linkedin.com/posts/heydoc-healthtech_wellnessgpt-ai-heydocai-activity-7396854123989651456-YRjy?utm_source=share&utm_medium=member_desktop&rcm=ACoAACpaBssByMjBLDLtg6rXrvg5gn6rkGAnJ1I" class="agentic-visual-link" itemprop="url">
+		  <img src="img/logo/collab.png" alt="Agentic hospital preview" class="agentic-thumb-img" itemprop="image"/>
+		</a>
 		<button class="agentic-dismiss" id="agentic-dismiss" aria-label="Dismiss announcement">✕</button>
 	  </div>
-	</div>
-  
-	<!-- Optional slim site-wide announcement bar (copy for header placement OR mobile) -->
-	<div class="agentic-announcement-bar" id="agentic-ann-bar" role="region" aria-live="polite">
-	  <a href="#agentic-section" class="agentic-ann-link">India’s first agentic hospital — WellnessGPT × ClearMedi — Learn more →</a>
-	  <button class="agentic-ann-close" id="agentic-ann-close" aria-label="Close announcement">✕</button>
+	  
 	</div>
   </section>
-  <!-- END: Agentic Hospital Launch Banner (insert here) -->
+  <!-- END: Agentic Hospital Launch Banner  -->
   
 							<div style="position: relative; overflow: hidden; width: 100%; padding-top: 56.25%;margin-top: 20px;">
 								<iframe 
@@ -893,7 +911,7 @@
 								</div>
 								<div class="card-content">
 									<h2 style="font-size: 26px;">Specialized <br>Healthcare AI Agents</h2>
-									<p style="font-size: 18px;">Specialized agents for triage, follow-ups, care planning, and claims powered by WellnessGPT’s domain-trained medical reasoning Agents.</p>
+									<p style="font-size: 18px;">Specialized agents for triage, follow-ups, care planning, and claims powered by WellnessGPT's domain-trained medical reasoning Agents.</p>
 									<a href="https://forms.gle/ovwj9HLPMaPL4sgh6" class="comic-button wow" target="_blank" rel="noopener">Talk with our team →</a>
 								</div>
 							</div>
